# fusabi-community

./: README.md
.github/: CODEOWNERS
.github/workflows/: docs-check.yml  release.yml  test-packages.yml
docs/: RELEASE.md  STRUCTURE.md
docs/versions/vNEXT/: CAPABILITIES.md  PACKAGES.md  README.md
registry/: index.toml
rust/: Cargo.toml
rust/crates/fusabi-provider-env-config/: Cargo.toml
rust/crates/fusabi-provider-env-config/src/: lib.rs
rust/crates/fusabi-provider-graphql/: Cargo.toml
rust/crates/fusabi-provider-graphql/src/: lib.rs
rust/crates/fusabi-provider-hibana-sinks/: Cargo.toml
rust/crates/fusabi-provider-hibana-sinks/src/: lib.rs
rust/crates/fusabi-provider-hibana-sources/: Cargo.toml  README.md
rust/crates/fusabi-provider-hibana-sources/src/: lib.rs
rust/crates/fusabi-provider-json-schema/: Cargo.toml
rust/crates/fusabi-provider-json-schema/src/: lib.rs  parser.rs
rust/crates/fusabi-provider-kubernetes/: Cargo.toml
rust/crates/fusabi-provider-kubernetes/src/: lib.rs
rust/crates/fusabi-provider-mcp/: Cargo.toml
rust/crates/fusabi-provider-mcp/src/: lib.rs  parser.rs  types.rs
rust/crates/fusabi-provider-obi/: Cargo.toml
rust/crates/fusabi-provider-obi/src/: lib.rs  parser.rs  types.rs
rust/crates/fusabi-provider-opentelemetry/: Cargo.toml
rust/crates/fusabi-provider-opentelemetry/src/: lib.rs
rust/crates/fusabi-provider-protobuf/: Cargo.toml  README.md
rust/crates/fusabi-provider-protobuf/examples/: user_service.proto
rust/crates/fusabi-provider-protobuf/src/: lib.rs  parser.rs  types.rs
rust/crates/fusabi-provider-regex/: Cargo.toml
rust/crates/fusabi-provider-regex/src/: lib.rs
rust/crates/fusabi-provider-sql/: Cargo.toml  README.md
rust/crates/fusabi-provider-sql/examples/: basic_usage.sql
rust/crates/fusabi-provider-sql/src/: lib.rs  parser.rs  types.rs
rust/crates/fusabi-provider-toml/: Cargo.toml  README.md  example.toml
rust/crates/fusabi-provider-toml/src/: lib.rs  parser.rs  types.rs
