[package]
name = "fusabi-provider-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol (MCP) type provider for Fusabi"
license = "MIT"
repository = "https://github.com/fusabi-lang/fusabi-community"

[dependencies]
fusabi-type-providers = { git = "https://github.com/fusabi-lang/fusabi", branch = "add-type-providers-crate" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
