[package]
name = "fusabi-provider-regex"
version = "0.1.0"
edition = "2021"
description = "Regex type provider for Fusabi - generates types from regex patterns with named capture groups"
license = "MIT"
repository = "https://github.com/fusabi-lang/fusabi-community"

[dependencies]
fusabi-type-providers = { git = "https://github.com/fusabi-lang/fusabi", branch = "add-type-providers-crate" }
regex = "1.10"
