[package]
name = "fusabi-provider-sql"
version = "0.1.0"
edition = "2021"
description = "SQL DDL type provider for Fusabi"
license = "MIT"
repository = "https://github.com/fusabi-lang/fusabi-community"

[dependencies]
fusabi-type-providers = { git = "https://github.com/fusabi-lang/fusabi", branch = "add-type-providers-crate" }
