[package]
name = "fusabi-provider-toml"
version = "0.1.0"
edition = "2021"
description = "TOML configuration type provider for Fusabi"
license = "MIT"
repository = "https://github.com/fusabi-lang/fusabi-community"

[dependencies]
fusabi-type-providers = { git = "https://github.com/fusabi-lang/fusabi", branch = "add-type-providers-crate" }
toml = "0.8"
